--- a/UC_version/styles.css
+++ b/UC_version/styles.css
@@ -126,11 +126,11 @@ A:hover {
 	clear: both;
 	}
 
-.headerReplacement {
+.header_replacement {
    text-indent: -9999px;
    width: 900px;
    height: 150px;
-   background: url(_images/Institution_Logos-slim-new.png) #cccccc no-repeat;  
+   background: url(_images/MAE_Logo-Graphic1-slim.png) #cccccc no-repeat;  
    }
 
 
